# cppeval

./: .gitignore  CMakeLists.txt  README.md
manager-oo/: CMakeLists.txt  README.md
manager-oo/include/: device.h  manager.h  subdevice.h
manager-oo/src/: main.cpp  manager.cpp  subdevice.cpp
manager-tpl/: CMakeLists.txt  README.md
manager-tpl/include/: manager.h  subdevice.h
manager-tpl/src/: main.cpp  subdevice.cpp
oo-to-tpl/: CMakeLists.txt  README.md
oo-to-tpl/include/: oo.h  tpl.h
oo-to-tpl/src/: main.cpp  oo.cpp  tpl.cpp
